<resources>
    <string name="app_name">RecipeOrganizer</string>

<!--    add / edit recipe page-->
    <string name="add_a_new_recipe_header">Add a New Recipe</string>
    <string name="edit_recipe_header">Edit Recipe</string>
    <string name="scraper_prompt">Got a recipe website link? Generate recipe now!</string>
    <string name="link_input_hint">Paste website link here</string>
    <string name="generate_recipe_button">Generate Recipe</string>
    <string name="category">Category</string>
    <string name="category_hint">Category</string>
    <string name="enter_custom_category">Enter custom category</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_name_hint">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="instructions">Instructions</string>
    <string name="add_instruction">Add Instruction</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="cancel">Cancel</string>
    <string name="update_recipe">Update Recipe</string>
    <string name="delete_recipe">Delete Recipe</string>

    <string-array name="category_array">
        <item>Appetizer</item>
        <item>Main Course</item>
        <item>Dessert</item>
        <item>Baking</item>
        <item>Snacks</item>
    </string-array>

    <!--login page-->
    <string name="recipe_organizer">Recipe Organizer!</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="dont_have_acc">Don\'t have an account? Sign Up now!</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="forgot_password_button">Forgot Password?</string>
    <string name="password_info">password_info</string>


    <!--recipe details page-->
    <string name="back_button_text">Back</string>
    <string name="edit_recipe_button_text">Edit Recipe</string>
    <string name="publish_recipe_button">Publish Recipe</string>
    <string name="unpublish_recipe_button">Unpublish Recipe</string>
    <string name="add_to_my_recipes_button">Add to My Recipes</string>


    <!--recipe list page-->
    <string name="my_recipes_header">My Recipes</string>
    <string name="profile">Profile</string>
    <string name="my_recipes">My Recipes</string>
    <string name="no_recipe">No recipes saved</string>
    <string name="add_recipe_button">Add Recipe</string>
    <string name="view_published_recipes_button">View Published Recipes</string>

    <!--Published Recipe List page-->
    <string name="published_recipes">Published Recipes</string>
    <string name="no_published_recipes">No Published Recipes</string>
    <string name="back_to_my_recipes_button">Back to My Recipes</string>

<!--    Profile Page-->
    <string name="logout_button">Logout</string>
    <string name="exit_profile">Exit Profile</string>
    <string name="my_profile_header">My Profile</string>
    <string name="email">Email:</string>
    <string name="change_pw_button">Change Password</string>

<!--    Change Password page-->
    <string name="change_pw_header">Change Password</string>
    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="change_password_button">Change Password</string>
    <string name="cancel_button">Cancel</string>
    <string name="current_password_label">Current Password</string>
    <string name="new_password_label">New Password</string>
    <string name="confirm_new_password_label">Confirm New Password</string>



</resources>