<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Got a recipe website link? Generate recipe now!" />

        <EditText
            android:id="@+id/recipeLinkEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Paste website link here"
            android:background="@drawable/rounded_edit_text"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/generateRecipeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Generate Recipe" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:entries="@array/category_array"
            android:padding="16dp"
            android:popupBackground="@android:color/white"
            android:textColor="@android:color/black"
            android:background="@drawable/rounded_spinner_background"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/customCategoryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_custom_category"
            android:visibility="gone"
            android:background="@drawable/rounded_edit_text"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_name" />

        <EditText
            android:id="@+id/recipeNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_name_hint"
            android:background="@drawable/rounded_edit_text"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients" />

        <LinearLayout
            android:id="@+id/ingredientsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/addIngredientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ingredient"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions" />

        <LinearLayout
            android:id="@+id/instructionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/addInstructionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_instruction" />

        <Button
            android:id="@+id/addRecipeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>
</ScrollView>