<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_organizer"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textColor="@color/colorSecondary"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:background="@drawable/rounded_edit_text"
            android:padding="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp"
                android:textColor="@color/colorSecondary" />

            <ImageView
                android:id="@+id/passwordInfoIcon"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@android:drawable/ic_dialog_info"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/password_info" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            android:background="@drawable/rounded_edit_text"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/passwordEditText"
                android:hint="@string/password_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/darker_gray"/>
        </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:padding="16dp"/>

        <Button
            android:id="@+id/forgotPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_button"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_acc"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button_text"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:padding="16dp"/>

    </LinearLayout>

</ScrollView>
