<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button_text" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/ingredientsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/instructionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="4dp" />

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_recipe_button_text"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/publishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_recipe_button"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/addToMyRecipesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add to My Recipes"
            android:layout_marginTop="16dp"
            android:layout_gravity="right"/>

    </LinearLayout>
</ScrollView>