<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Header Title (Change Password) -->
        <TextView
            android:id="@+id/headerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pw_header"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp" />


        <!-- Current Password Label -->
        <TextView
            android:id="@+id/label_current_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_password_label"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"/>

        <!-- Current Password EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            android:background="@drawable/rounded_edit_text"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/et_current_password"
                android:hint="@string/password_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/darker_gray"/>
        </com.google.android.material.textfield.TextInputLayout>


        <!-- New Password Label -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/label_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password_label"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                />

            <ImageView
                android:id="@+id/passwordInfoIcon"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@android:drawable/ic_dialog_info"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/password_info" />
        </LinearLayout>


        <!-- New Password EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            android:background="@drawable/rounded_edit_text"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/et_new_password"
                android:hint="@string/password_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/darker_gray"/>
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Confirm New Password Label -->
        <TextView
            android:id="@+id/label_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_new_password_label"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"/>

        <!-- Confirm New Password EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            android:background="@drawable/rounded_edit_text"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/et_confirm_password"
                android:hint="@string/password_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/darker_gray"/>
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Change Password Button -->
        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password_button"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"/>


        <!-- Cancel Button -->
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"/>

    </LinearLayout>

</ScrollView>
