<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:background="@drawable/ic_logout"
        android:contentDescription="@string/logout"
        android:text="" />

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_recipes"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"/>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/logoutButton"
        android:queryHint="Search Recipes"
        android:background="@drawable/search_view_background" />

    <TextView
        android:id="@+id/noRecipesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_recipe"
        android:textSize="18sp"
        android:visibility="gone"
        android:layout_below="@id/searchView"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/addRecipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_recipe_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:padding="16dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchView"
        android:layout_above="@id/addRecipeButton"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/categoryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipeRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/categoryTextView" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>